--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,16 @@
 <!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Qwerty</title>
-  <base href="/">
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+<html lang="en">
+	<head>
+	  <meta charset="utf-8">
+	  <title>Qwerty</title>
+	  <base href="/">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="icon" type="image/x-icon" href="favicon.ico">
+	  <!-- <link href="../node_modules/@angular/material/prebuilt-themes/indigo-pink.css" rel="stylesheet"> -->
+	</head>
+	
+	<body>
+	  <app-root></app-root>
+	</body>
 </html>
